# six-qui-prend

./: README.md  six-qui-prend.sln  sixQuiPrend.sln
Server/: Board.h  CardModel.cpp  CardModel.h  Column.h  ConnectionHandler.cpp  ConnectionHandler.h  ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Deck.h  Event.cpp  Event.h  EventCallback.h  EventType.h  Game.cpp  Game.h  GameEventHandler.cpp  GameEventHandler.h  Player.cpp  Player.h  ReactorServer.cpp  RequestBody.h  Round.h  Server.cpp  Server.vcxproj  Server.vcxproj.filters  Singleton.h  packages.config
Server/Server/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Board.h  CMakeCache.txt  CMakeLists.txt  Column.h  ConnectionHandler.cpp  ConnectionHandler.h  Deck.h  EventType.h  Game.h  GameEventHandler.cpp  GameEventHandler.h  Player.cpp  Player.h  ReactorServer.cpp  Server.sln  Server.vcxproj  Server.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  server-cmake.sln  server-cmake.vcxproj  server-cmake.vcxproj.filters
six-qui-prend/: App.xaml  App.xaml.cs  GameRoom.xaml  MainWindow.xaml  MainWindow.xaml.cs  six-qui-prend.csproj
six-qui-prend/Models/: Card.cs  Game.cs  GameBoard.cs  Line.cs  Message.cs  MessageSent.cs  Player.cs  ServerCommunication.cs
six-qui-prend/View/: GameRoom.xaml  GameRoom.xaml.cs  PlayerView.xaml  PlayerView.xaml.cs  ViewCardPlayer.xaml  ViewCardPlayer.xaml.cs
six-qui-prend/ViewModel/: CardViewModel.cs  GameBoardViewModel.cs  LineViewModel.cs  ViewModelBase.cs  (+1 more)
sixQuiPrend/: Program.cs  sixQuiPrend.csproj
(+5 files in other folders)
